# RMine

./: .gitignore  CMakeLists.txt  README.md
src/: includes.h  main.cpp  main.h
